test/langtools/tools/javac/classreader/8219810/BadMethodFlagsTest.out
BadMethodFlagsTest.java:10:13: compiler.err.cant.access: BadMethodFlags, (compiler.misc.bad.class.file.header: BadMethodFlags.class, (compiler.misc.illegal.flag.combo: 0x0105, method, my_method()))
1 error
